<resources>
    <string name="app_name">CitiZr</string>
	<string name="url">https://nesclub.nespresso.com/id/login/</string>
	<string name="email_to">brian@schau.dk</string>
	<string name="email_subject">[CitiZr] Query</string>
	<string name="email_body">Please enter your query about CitiZr here &#8230;</string>
	<string name="menuaddlogin">Credentials</string>
	<string name="menuabout">About</string>
	<string name="menulist">Overview</string>
	<string name="menuclub">Nespresso Club</string>
	<string name="menuinstructions">Instructions</string>
	<string name="txtlogo">Please enter your username and password to access Club Nespresso:</string>
    <string name="tvlogin">Username:</string>
    <string name="tvpassword">Password:</string>
    <string name="butok">Save</string>
    <string name="butcancel">Cancel</string>
	<string name="scale_logo">Mixing ratio:</string>
    <string name="instructions_recommended">Use with</string>
    <string name="instructions_caffelatte_name">Caffe Latte</string>
    <string name="instructions_caffelatte_body">Prepare a Lungo in a tall glass (350 ml) and add hot milk.\nAdd suger to your tasting.</string>
    <string name="instructions_caffelatte_mixing">&#189; hot milk\n&#189; Lungo</string>
    <string name="instructions_caffelatte_capsule">Vivalto or Decaffeinato Lungo</string>
    <string name="instructions_cappuccino_name">Cappuccino</string>
    <string name="instructions_cappuccino_body">Prepare an Espresso in a Cappuccino cup and add hot milk foam.\nAdd sugar and sprinkle with cocoa.</string>
    <string name="instructions_cappuccino_mixing">2/3 hot milk foam\n1/3 Espresso</string>
    <string name="instructions_cappuccino_capsule">Ristretto, Arpeggio or Decaffeinato Intenso</string>
    <string name="instructions_icedcappuccino_name">Iced Cappuccino</string>
    <string name="instructions_icedcappuccino_body">Prepare a Lungo in a tall glass (350 ml) and add sugar to your tasting.\nPour into a large cup with four or five crushed ice cubes.\nPrepare cold milk foam using the foamer.\nCarefully add 3 &#8211; 4 teaspoons of milkfoam on the top.\nSprinkle with cinnamon, nutmeg or cocoa.</string>
    <string name="instructions_icedcappuccino_mixing">&#189; cold milk foam\n&#189; Lungo</string>
    <string name="instructions_icedcappuccino_capsule">Vivalto or Decaffeinato Lungo</string>
    <string name="instructions_lattemacchiato_name">Latte Macchiato</string>
    <string name="instructions_lattemacchiato_body">Add milk foam into a tall glass (350 ml).\nPrepare an Espresso and pour slowly into the glass down the side so that the coffee is graduated during the milk. The result should be a 3 layer effect - milk in the bottom, coffee in the middle and milk foam at the top.</string>
    <string name="instructions_lattemacchiato_mixing">2/3 hot milk foam\n1/3 Espresso</string>
    <string name="instructions_lattemacchiato_capsule">Ristretto, Arpeggio or Decaffeinato Intenso</string>
    <string name="shop_username">your username</string>
    <string name="shop_password">your password</string>
    <string name="shop_fetching">Loading …</string>
    <string name="shop_error">You need to specify</string>
    <string name="about">This is CitiZr by Brian Schau.</string>
    <string name="about_about">About</string>
    <string name="about_version">Version:</string>
    <string name="about_send_email">Send email …</string>
    <string name="about_noemail">Bummer - the email program is not configured properly</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>
    <string name="coffee_cup1">Half espresso cup (Ristretto)</string>
    <string name="coffee_cup2">Whole espresso cup</string>
	<string name="coffee_cup3">Cappuccino cup</string>
	<string name="coffee_cup4">Lungo cup</string>
    <string-array name="capsulecategory">
    	<item>Unknown</item>
    	<item>Pure Origin</item>
    	<item>Espresso</item>
    	<item>Lungo</item>
    	<item>Limited Edition</item>
        <item>Variations</item>
        <item>Intenso</item>
    </string-array>
    <string name="capsuleimage">Capsule</string>
    <string name="strengthimage">Strength</string>
    <string name="tastingimage">Type</string>
    <string name="whipimage">Whipper</string>
    <string name="variations_hazelnut_name">Hazelnut - variations</string>
    <string name="variations_hazelnut_head">Variations Hazelnut</string>
    <string name="variations_hazelnut_body">The combination of the lightly roasted hazelnut notes with the Livanto Grand Cru reveals praline flavours, giving it a well balance in the mouth.</string>
    <string name="variations_macadamia_name">Macadamia - variations</string>
    <string name="variations_macadamia_head">Variations Macadamia</string>
    <string name="variations_macadamia_body">The rich savours of the macadamia nut combined with the roundness of the Livanto Grand Cru, develop a surprising freshness, revealing citrus notes.</string>
    <string name="new_dulsao_do_brasil_name">Dulsão do Brasil - new</string>
    <string name="new_dulsao_do_brasil_head">Lightly toasted grain</string>
    <string name="new_dulsao_do_brasil_body">A pure Arabica coffee, Dulsão do Brasil is a delicate blend of red and yellow Bourbon beans with a distinctive note of toasted grain. The beans are treated semi-dry to allow the mucillage sugars to infuse the bean with a mellow flavour, then separately roasted to reveal an elegantly balanced satiny sweet flavour with a note of toasted grain.</string>
    <string name="indriya_from_india_name">Indriya from India</string>
    <string name="indriya_from_india_head">Powerful and spicy</string>
    <string name="indriya_from_india_body">This full-bodied espresso is a blend of Arabica and Robusta from Southern India. It is sustained but quick roasting balances its strong character, bringing out cocoa notes and spicy notes of cloves, pepper and nutmeg.</string>
    <string name="rosabaya_de_colombia_name">Rosabaya de Colombia</string>
    <string name="rosabaya_de_colombia_head">Fruity and balanced</string>
    <string name="rosabaya_de_colombia_body">From a soft base, this blend of Colombian Arabicas reveals typical notes of red fruit jam reminiscent of winey flavours. Grown on small Colombian plantations, the coffee is hand-picked and prepared using the wet method. Split roasting accentuates the fruity notes and acidity whilst bringing body to the coffee.</string>
    <string name="ristretto_name">Ristretto</string>
    <string name="ristretto_head">Powerful and contrasting</string>
    <string name="ristretto_body">Strong in flavour and body, Ristretto combines the best South American Arabicas, from countries such as Colombia and Brazil, East African Arabicas famous for their citrus flavour, and a touch of Robusta for added zing. The slow split roasting of the beans creates a contrasting bouquet, bringing together subtle fruity and acid notes, with intensely roasted and chocolate notes.</string>
    <string name="arpeggio_name">Arpeggio</string>
    <string name="arpeggio_head">Intense and creamy</string>
    <string name="arpeggio_body">Arpeggio receives its distinctive character and full body from a blend of Central and South American Arabicas. The long roasting develops each origin to produce an intense bouquet, combining roasted, woody, and cocoa notes.</string>
    <string name="roma_name">Roma</string>
    <string name="roma_head">Full and balanced</string>
    <string name="roma_body">A subtle balance between strength, depth and finesse, Roma is distinguished by its woody and roasted notes. Central and South American Arabicas combined with Robusta are lightly roasted to preserve the delicate aroma of the blend. Roma is the ideal coffee for those looking for an espresso that is short, but mild.</string>
    <string name="decaffeinato_intenso_name">Decaffeinato Intenso</string>
    <string name="decaffeinato_intenso_head">Dense and powerful</string>
    <string name="decaffeinato_intenso_body">Decaffeinato Intenso is a strong espresso with a dense body and subtle notes of cocoa and toasted cereals. The marriage of South American Arabicas with a touch of Robusta undergoes a short, intense roast, which intensifies the flavours, and highlights the strength of the blend.</string>
    <string name="livanto_name">Livanto</string>
    <string name="livanto_head">Round and balanced</string>
    <string name="livanto_body">This blend of Central and South American Arabicas is a medium roast which reveals a round and balanced bouquet. It evokes the scent of freshly roasted coffee and combines caramelised and roasted notes with a light fruitiness.</string>
    <string name="capriccio_name">Capriccio</string>
    <string name="capriccio_head">Rich and distinctive</string>
    <string name="capriccio_body">Capriccio is an espresso with a balanced bouquet, a light acidity and a typical cereal note. It is composed of an ideal mix of Arabicas from South American countries including Brazil and a touch of lightly roasted Robusta.</string>
    <string name="volluto_name">Volluto</string>
    <string name="volluto_head">Sweet and fruity</string>
    <string name="volluto_body">Pleasantly aromatic, Volluto has a rounded body, with sweet biscuit and fruity notes. A combination of Brazilian and Colombian Arabicas, its fine character is revealed by a light roast. Volluto is 100% sourced from the Nespresso AAA Sustainable Quality Program, a farmer- support initiative co-managed with the Rainforest Alliance.</string>
    <string name="cosi_name">Cosi</string>
    <string name="cosi_head">Light and lemony</string>
    <string name="cosi_body">A blend of East African, Central and South American Arabicas, lightly roasted to preserve the fragile citrus note, creates the personality of Cosi. Its light body helps reveal a refreshing lemony note.</string>
    <string name="decaffeinato_name">Decaffeinato</string>
    <string name="decaffeinato_head">Fruity and delicate</string>
    <string name="decaffeinato_body">A light and subtle decaffeinated coffee, this Grand Cru elegantly marries the notes of red fruit, dried fruit and cereals. A perfect composition of several South American Arabicas, notably Colombian, and a touch of lightly roasted Robusta. Decaffeinato is a very mild espresso.</string>
    <string name="finezzo_lungo_name">Finezzo Lungo</string>
    <string name="finezzo_lungo_head">Floral and refreshing</string>
    <string name="finezzo_lungo_body">This light and thirst-quenching Lungo expresses a floral bouquet of jasmine, orange blossom and bergamot. A lightly roasted blend of floral East African Arabicas and aromatic Arabicas from South and Central America, Finezzo Lungo is lifted by a touch of acidity.</string>
    <string name="fortissio_lungo_name">Fortissio Lungo</string>
    <string name="fortissio_lungo_head">Rich and intense</string>
    <string name="fortissio_lungo_body">This full-bodied Lungo is characterised by notes of dark-roasted beans. A blend of Central and South American Arabicas with a hint of Robusta, Fortissio Lungo offers a delicious bitterness and depth on the palate.</string>
    <string name="vivalto_lungo_name">Vivalto Lungo</string>
    <string name="vivalto_lungo_head">Complex and balanced</string>
    <string name="vivalto_lungo_body">A complex yet balanced marriage between South American Arabicas cultivated at high altitude, such as (Cerrado) from Brazil, and an East African Arabica. Vivalto Lungo combines roasted and subtle floral notes. Split roasting of the beans enhances the character of each origin.</string>
    <string name="decaffeinato_lungo_name">Decaffeinato Lungo</string>
    <string name="decaffeinato_lungo_head">Light and full-flavored</string>
</resources>