<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
    android:background="@color/background"
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content">
   	
	<TextView android:id="@+id/spacer1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp" />

	<TextView android:id="@+id/txtlogo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/txtlogo"
		android:textColor="@color/text"
		android:layout_below="@+id/spacer1"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp" />

	<TextView android:id="@+id/spacer2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtlogo"
		android:layout_marginBottom="8dp" />
		
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="vertical"
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:layout_below="@+id/spacer2"
  		android:stretchColumns="1">

		<TableRow android:id="@+id/TableRow01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/txt01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:textColor="@color/text"
				android:text="@string/tvlogin" />
			<EditText android:id="@+id/tvlogin"
			    android:inputType="text"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</TableRow>

		<TableRow android:id="@+id/TableRow02"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/txt02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:textColor="@color/text"
				android:text="@string/tvpassword" />
			<EditText android:id="@+id/tvpassword"
			    android:inputType="textPassword"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</TableRow>
	</TableLayout>
	
	<LinearLayout android:id="@+id/LinearLayout02" 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:layout_alignParentBottom="true">
    	<Button android:id="@+id/butok" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="1"
        	android:text="@string/butok"
        	android:onClick="buttonOkClicked" />
    	<Button android:id="@+id/butcancel" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:layout_weight="1" 
        	android:text="@string/butcancel"
        	android:onClick="buttonCancelClicked" />
	</LinearLayout>
</RelativeLayout>