<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cupstoast"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
	android:padding="10dp"
	android:background="@drawable/frame">

	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:contentDescription="@string/coffee_cup1"
		android:id="@+id/image1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/cup1"
       	android:gravity="center" />
		
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/name1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textColor="@color/text"
		android:textSize="18dp"
		android:text="@string/coffee_cup1" />

	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:contentDescription="@string/coffee_cup2"
		android:id="@+id/image2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/cup2"
    	android:gravity="center" />
		
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/name2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textColor="@color/text"
		android:textSize="18dp"
		android:text="@string/coffee_cup2" />

	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:contentDescription="@string/coffee_cup3"
		android:id="@+id/image3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/cup3"
    	android:gravity="center" />
	
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/name3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textColor="@color/text"
		android:textSize="18dp"
		android:text="@string/coffee_cup3" />

	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
		android:contentDescription="@string/coffee_cup4"
		android:id="@+id/image4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/cup4"
       	android:gravity="center" />
	
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/name4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textColor="@color/text"
		android:textSize="18dp"
		android:text="@string/coffee_cup4" />
</LinearLayout>
