<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@color/background"
	android:id="@+id/capsulelayout">

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1">

 		<TableRow>
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/text"
				android:textSize="20dp"
				android:paddingLeft="8dp" />
			
			<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
			    android:contentDescription="@string/capsuleimage"
				android:id="@+id/image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="@null"
				android:layout_marginLeft="8dp"
            	android:gravity="center" />
		</TableRow>
		
		<TableRow>
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/teaser"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:textColor="@color/text"
				android:textSize="14dip"
				android:paddingLeft="8dp" />
			
			<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
			    android:contentDescription="@string/strengthimage"
				android:id="@+id/strength"
				android:scaleType="fitCenter"
            	android:adjustViewBounds="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="@null"
				android:layout_marginLeft="8dp" />
		</TableRow>
		
		<TableRow>
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/category"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:textColor="@color/text"
				android:textSize="14dp"
				android:layout_span="2" />
		</TableRow>
		
		<TableRow>
			<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
			    android:contentDescription="@string/tastingimage"
				android:id="@+id/tasting"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@null"
				android:paddingLeft="8dp"
				android:layout_span="2"
				android:gravity="left" />
		</TableRow>		
	</TableLayout>

	<ScrollView android:id="@+id/scrollpane"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:id="@+id/scrolllayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:textColor="@color/text"
				android:textSize="18dip"
				android:paddingTop="4dp"
				android:paddingBottom="4dp"
				android:paddingLeft="8dp"
				android:paddingRight="8dp" />

			<Button android:id="@+id/ok"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/ok" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
